# kwin-effect-smart-invert

./: .#CMakeLists.txt  .gitignore  CMakeLists.txt  README.org  invert.cpp  invert.h  invert.kcfg  invert_config.cpp  invert_config.h  invert_config.ui  invertconfig.kcfgc  metadata.json  plugin.cpp  shaders.qrc  smartInvert.desktop  smartInvertConfig.desktop  smartInvert_config.desktop  smartInvert_config.desktop_from_other
.github/workflows/: main.yml
data/1.10/: invert.frag
data/1.40/: invert.frag  invert.frag.log69.cpp  invert.frag.matrix_thirds.cpp  invert.frag.smart.cpp  invert.frag.wbolster.cpp
